<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raghavkishan.sdsuhometownchat.MainActivity">

    <TextView
        android:id="@+id/app_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_string"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.126"
        android:textSize="27dp"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/existing_user_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_user_heading_string"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintVertical_bias="0.277"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/new_user_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_heading_string"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintVertical_bias="0.278"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/login_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="449dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.445"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/login_id_value_hint_string"
        app:layout_constraintHorizontal_bias="0.502"
        android:nextFocusForward="@+id/password_value"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/login_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id_label_string"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintVertical_bias="0.449"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label_string"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.64"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/login_password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.037"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        android:hint="@string/password_value_hint_string"/>

    <Button
        android:id="@+id/register_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_label_string"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.449"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        android:textAllCaps="false"
        android:textSize="20dp"/>


</android.support.constraint.ConstraintLayout>
